@@ -1,0 +1,6 @@
+#include "hmacbuf.ih"
+
+HMacBuf::~HMacBuf()
+{
+    delete d_pimpl;
+}
