@@ -1,0 +1,8 @@
+#!/bin/sh
+
+ln -s .. bobcat
+
+g++ -I. --std=c++0x -O2 -Wall -o driver driver.cc -lssl -lbobcat \
+    -L../../ohexstreambuf/tmp -L../tmp -lhmacbuf   -lohexstreambuf
+
+rm bobcat
