@@ -1,0 +1,5 @@
+#include "hmacbuf.ih"
+
+HMacBuf::
+{
+}
