@@ -6,6 +6,8 @@ bobcat (2.04.00)
     specified std::ostream.
   * New Class: DigestBuf, computing various types of message digests from
     information written to an std::ostream
+  * New Class: HMacBuf, to compute a HMAC hashvalue from information written
+    to an std::ostream
 
 bobcat (2.03.00)
 
